# FastAPI-tutorial

./: README.md  main.py  pyproject.toml  test_dependency_injection.py
Generators/: generator_1.py  generator_2.py  task_1.py  task_2.py
inheritance/: inh_1.py  inh_2.py
pydantic/: pyd_1.py  pyd_2.py  pyd_3.py  pyd_4.py  pyd_5.py  pyd_6.py  pyd_7_sql_inj_lock.py  pyd_8_verify_passw.py
synchronous_programming/: asynchr_prog.py  synchr_prog.py
tutorial_tasks/: task_1.py  task_2.py  task_3.py  task_4.py  task_5.py  task_6.py  task_7.py
