[tool.poetry]
name = "fastapi-tutorial"
version = "0.1.0"
description = ""
authors = ["PawWitGit <git.pawelwitala@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_tutorial"}]

[tool.poetry.dependencies]
python = "^3.10"
mypy = "^0.991"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
