[tool.poetry]
name = "fastapi-tutorial"
version = "0.1.0"
description = ""
authors = ["PawWitGit <git.pawelwitala@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_tutorial"}]

[tool.poetry.dependencies]
python = "^3.10"
mypy = "^0.991"
pydantic = "^1.10.2"
fastapi = "^0.87.0"
uvicorn = "^0.20.0"
pytest = "^7.2.0"
requests = "^2.28.1"
typefit = "^0.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
